--- a/movie.html
+++ b/movie.html
@@ -5,5 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>상세페이지</title>
   </head>
-  <body></body>
+  <body>
+    <span>영화상세</span>
+  </body>
 </html>
