--- a/movie.html
+++ b/movie.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>상세페이지</title>
+    <script src="js/content.js" type="module"></script>
   </head>
   <body>
-    <span>영화상세</span>
+    <main class="movie-content">
+      <!-- <div class="movie-content__poster">
+        <img src="#" />
+      </div> -->
+    </main>
   </body>
 </html>
