--- a/movie.html
+++ b/movie.html
@@ -5,5 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>상세페이지</title>
   </head>
-  <body></body>
+  <body>
+    <div class="title">
+      <span class="title__text">🍿 혜원이의 최고 평점 영화 콜렉션 🍿</span>
+    </div>
+    <div class="info">
+      <p>개봉날짜 | <span class="date"></span></p>
+      <a href="#"><img
+        src="https://item.kakaocdn.net/do/247cadd1c8fc62ed64ad409fa92b651a9f17e489affba0627eb1eb39695f93dd"
+        ></a>
+      <section id="information">
+        <div class="inner">
+          <h2>Overview</h2>
+          <p class="content"></p>
+    </div>
+    <div class="form-container">
+      <form id="form">
+       <input id="name" class="name" type="text" placeholder="name">
+       <input id="password" class="password" type="password" placeholder="password">
+       <input id="review" class="review" type="text" placeholder="내용을 입력하세요">
+       <button type="submit">submit</button>
+      </form>
+    </div>
+  </body>
 </html>
