--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <script src="js/api.js" type="module"></script>
     <script src="js/movie.js" type="module"></script>
+    <script src="js/topbtn.js" type="module"></script>
     <title>혜원이의 최고 평점 영화 콜렉션</title>
   </head>
   <body>
