상세페이지html,js

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
         </div>
       </div> -->
   </div>
+  <div class="noMovie"></div>
+
   <footer>COPYRIGHT&copy; Hyewon Movies All rights reserved.</footer>
 </body>
 
