--- a/movie.html
+++ b/movie.html
@@ -6,13 +6,57 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>상세페이지</title>
   <script src="js/content.js" type="module"></script>
+  <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="./css/detail.css">
 </head>
 
 <body>
+  <header>머리머리머리</header>
   <main class="movie-content">
-    <!-- <div class="movie-content__poster">
-        <img src="#" />
-      </div> -->
+    <div class="movie-content-top">
+      <figure class="movie-poster">포스터입니다</figure>
+      <div class="movie-detail">
+        <div class="movie-title">
+          타이틀입니다
+        </div>
+        <div class="movie-tagline">한줄평입니다</div>
+
+        <div class="movie-info">
+          <div class="detail-inner">
+            <dl class="inner-content">
+              <dt>Release Date</dt>
+              <dt>1234</dt>
+            </dl>
+            <dl class="inner-content">
+              <dt>Genre</dt>
+              <dt>무서워</dt>
+            </dl>
+            <dl class="inner-content">
+              <dt>🎦</dt>
+              <dt>겁나김</dt>
+            </dl>
+          </div>
+          <div class="detail-inner">
+            <dl class="inner-content">
+              <dt>⭐</dt>
+              <dt>꿀잼</dt>
+            </dl>
+            <dl class="inner-content">
+              <dt>country</dt>
+              <dt>북한</dt>
+            </dl>
+            <dl class="inner-content">
+              <dt>Language</dt>
+              <dt>조선말</dt>
+            </dl>
+
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="movie-overview">
+      스토리입니다
+    </div>
   </main>
 </body>
 
