--- a/movie.html
+++ b/movie.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>상세페이지</title>
     <script src="js/content.js" type="module"></script>
+    <script src="js/review.js" type="module"></script>
   </head>
   <body>
     <main class="movie-content">
@@ -12,5 +14,45 @@
         <img src="#" />
       </div> -->
     </main>
+    <div class="review">
+      <form class="review__form">
+        <div class="review__info">
+          <label class="review__label">이름</label>
+          <input
+            type="text"
+            class="review__username"
+            placeholder="이름"
+            minlength="1"
+          />
+          <label class="review__label">비밀번호</label>
+          <input
+            type="password"
+            class="review__password"
+            placeholder="비밀번호"
+            minlength="4"
+          />
+          <label class="review__label">별점</label>
+          <select class="review__star" id="star" required>
+            <option selected>별점 선택</option>
+            <option value="⭐️">⭐️</option>
+            <option value="⭐️⭐️">⭐️⭐️</option>
+            <option value="⭐️⭐️⭐️">⭐️⭐️⭐️</option>
+            <option value="⭐️⭐️⭐️⭐️">⭐️⭐️⭐️⭐️</option>
+            <option value="⭐️⭐️⭐️⭐️⭐️">⭐️⭐️⭐️⭐️⭐️</option>
+          </select>
+        </div>
+        <div class="review__content">
+          <label class="review__label">리뷰</label>
+          <textarea
+            class="review__textarea"
+            placeholder="내용을 입력해 주세요."
+            cols="40"
+            rows="10"
+            minlength="10"
+          ></textarea>
+          <input type="submit" class="form-submit btn" value="등록" />
+        </div>
+      </form>
+    </div>
   </body>
 </html>
