항목별 버튼 구현 전

--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
     <title>혜원이의 최고 평점 영화 콜렉션</title>
   </head>
   <body>
-    <div class="title">
-      <span class="title__text">🍿 혜원이의 최고 평점 영화 콜렉션 🍿</span>
-    </div>
+    <nav class="title">
+      <span class="title__text">Our Tube</span>
+      <div class="arrayBtn">
+        <button class="ratingBtn">평점순</button>
+        <button class="nameBtn">이름순</button>
+        <button class="dateBtn">개봉순</button>
+      </div>
+    </nav>
     <div class="search">
       <form class="search__form">
         <label>영화 검색 :</label>
