버튼 수정중

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>혜원이의 최고 평점 영화 콜렉션</title>
   </head>
   <body>
-    <nav class="title">
-      <span class="title__text">Our Tube</span>
+    <nav class="topNav">
+      <a class="homeBtn" href="index.html">Our Tube</a>
       <div class="arrayBtn">
         <button class="ratingBtn">평점순</button>
         <button class="nameBtn">이름순</button>
