--- a/movie.html
+++ b/movie.html
@@ -6,8 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>상세페이지</title>
   <script src="js/content.js" type="module"></script>
-  <link rel="stylesheet" href="./css/reset.css">
-  <link rel="stylesheet" href="./css/detail.css">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
