--- a/movie.html
+++ b/movie.html
@@ -9,8 +9,13 @@
   <link rel="stylesheet" href="./css/style.css">
 </head>
 
-<body>
-  <header>머리머리머리</header>
+<body class="detail-body">
+  <header>
+    <div>
+      머리머리머리ppppppppppppppp
+    </div>
+  </header>
+
   <main class="movie-content">
     <div class="movie-content-top">
       <figure class="movie-poster">포스터입니다</figure>
@@ -21,42 +26,45 @@
         <div class="movie-tagline">한줄평입니다</div>
 
         <div class="movie-info">
-          <div class="detail-inner">
-            <dl class="inner-content">
-              <dt>Release Date</dt>
-              <dt>1234</dt>
-            </dl>
-            <dl class="inner-content">
-              <dt>Genre</dt>
-              <dt>무서워</dt>
-            </dl>
-            <dl class="inner-content">
-              <dt>🎦</dt>
-              <dt>겁나김</dt>
-            </dl>
-          </div>
-          <div class="detail-inner">
-            <dl class="inner-content">
-              <dt>⭐</dt>
-              <dt>꿀잼</dt>
-            </dl>
-            <dl class="inner-content">
-              <dt>country</dt>
-              <dt>북한</dt>
-            </dl>
-            <dl class="inner-content">
-              <dt>Language</dt>
-              <dt>조선말</dt>
-            </dl>
+          <li class="detail-inner">
+            <ul class="inner-content">
+              <p>Release Date</p>
+              <p></p>
+            </ul>
+            <ul class="inner-content">
+              <p>Genre</p>
+              <p></p>
+            </ul>
+            <ul class="inner-content">
+              <p>🎦</p>
+              <p>겁나김</p>
+            </ul>
+          </li>
+          <li class="detail-inner">
+            <ul class="inner-content">
+              <p>⭐</p>
+              <p></p>
+            </ul>
+            <ul class="inner-content">
+              <p>country</p>
+              <p></p>
+            </ul>
+            <ul class="inner-content">
+              <p>Language</p>
+              <p></p>
+            </ul>
 
-          </div>
+          </li>
         </div>
       </div>
     </div>
+
     <div class="movie-overview">
       스토리입니다
+
     </div>
   </main>
+
 </body>
 
 </html>
