--- a/movie.html
+++ b/movie.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>상세페이지</title>
+    <link rel="icon" type="image/x-icon" href="asset/favicon.ico" />
+    <title></title>
     <script src="js/content.js" type="module"></script>
     <script src="js/review.js" type="module"></script>
   </head>
@@ -52,44 +53,50 @@
       <div class="movie-overview">스토리입니다</div>
     </main>
     <div class="review">
-      <form class="review__form">
-        <div class="review__info">
-          <label class="review__label">이름</label>
-          <input
-            type="text"
-            class="review__username"
-            placeholder="이름"
-            minlength="1"
-          />
-          <label class="review__label">비밀번호</label>
-          <input
-            type="password"
-            class="review__password"
-            placeholder="비밀번호"
-            minlength="4"
-          />
-          <label class="review__label">별점</label>
-          <select class="review__star" id="star" required>
-            <option selected>별점 선택</option>
-            <option value="⭐️">⭐️</option>
-            <option value="⭐️⭐️">⭐️⭐️</option>
-            <option value="⭐️⭐️⭐️">⭐️⭐️⭐️</option>
-            <option value="⭐️⭐️⭐️⭐️">⭐️⭐️⭐️⭐️</option>
-            <option value="⭐️⭐️⭐️⭐️⭐️">⭐️⭐️⭐️⭐️⭐️</option>
-          </select>
-        </div>
-        <div class="review__content">
-          <label class="review__label">리뷰</label>
-          <textarea
-            class="review__textarea"
-            placeholder="내용을 입력해 주세요."
-            cols="40"
-            rows="10"
-            minlength="5"
-          ></textarea>
-          <input type="submit" class="review__submitbtn" value="등록" />
-        </div>
-      </form>
+      <div class="review__wrap">
+        <form class="review__form">
+          <div class="review__info">
+            <label class="review__label">이름: </label>
+            <input
+              type="text"
+              class="review__username"
+              placeholder="이름을 입력해주세요"
+              minlength="1"
+              required
+            />
+            <label class="review__label">비밀번호: </label>
+            <input
+              type="password"
+              class="review__password"
+              placeholder="비밀번호 (4자 이상)"
+              minlength="4"
+              required
+            />
+            <label class="review__label">별점: </label>
+            <select class="review__star" id="star" required>
+              <option selected value="">별점 선택</option>
+              <option value="⭐️">⭐️</option>
+              <option value="⭐️⭐️">⭐️⭐️</option>
+              <option value="⭐️⭐️⭐️">⭐️⭐️⭐️</option>
+              <option value="⭐️⭐️⭐️⭐️">⭐️⭐️⭐️⭐️</option>
+              <option value="⭐️⭐️⭐️⭐️⭐️">⭐️⭐️⭐️⭐️⭐️</option>
+            </select>
+          </div>
+          <div class="review__content">
+            <label class="review__label">리뷰</label>
+            <textarea
+              class="review__textarea"
+              placeholder="내용을 입력해 주세요."
+              cols="40"
+              rows="10"
+              minlength="5"
+              required
+            ></textarea>
+            <input type="submit" class="review__submitbtn" value="등록" />
+          </div>
+        </form>
+      </div>
+
       <ul id="review__lists">
         <li class="review__list">
           <div>
