--- a/movie.html
+++ b/movie.html
@@ -11,50 +11,51 @@
 
 <body class="detail-body">
   <header>
-    <div>
-      머리머리머리ppppppppppppppp
+    <a href="index.html" id="homeButton">OurTube</a>
+
+    <div class="movie-title">
+      타이틀입니다
     </div>
+    <button id="darkModeToggle">다크 모드</button>
   </header>
 
   <main class="movie-content">
     <div class="movie-content-top">
       <figure class="movie-poster">포스터입니다</figure>
       <div class="movie-detail">
-        <div class="movie-title">
-          타이틀입니다
-        </div>
+
         <div class="movie-tagline">한줄평입니다</div>
 
         <div class="movie-info">
-          <li class="detail-inner">
-            <ul class="inner-content">
-              <p>Release Date</p>
+          <ul class="detail-inner">
+            <li class="inner-content">
+              <p>Release Date <br>📽</p>
               <p></p>
-            </ul>
-            <ul class="inner-content">
-              <p>Genre</p>
+            </li>
+            <li class="inner-content">
+              <p>Genre <br>🎞</p>
               <p></p>
-            </ul>
-            <ul class="inner-content">
-              <p>🎦</p>
+            </li>
+            <li class="inner-content">
+              <p>Runtime <br>🎦</p>
               <p>겁나김</p>
-            </ul>
-          </li>
-          <li class="detail-inner">
-            <ul class="inner-content">
-              <p>⭐</p>
+            </li>
+          </ul>
+          <ul class="detail-inner">
+            <li class="inner-content">
+              <p>vote_average<br>⭐</p>
               <p></p>
-            </ul>
-            <ul class="inner-content">
-              <p>country</p>
+            </li>
+            <li class="inner-content">
+              <p>country <br>🌏</p>
               <p></p>
-            </ul>
-            <ul class="inner-content">
-              <p>Language</p>
+            </li>
+            <li class="inner-content">
+              <p>Language <br>🔊</p>
               <p></p>
-            </ul>
+            </li>
 
-          </li>
+          </ul>
         </div>
       </div>
     </div>
@@ -65,6 +66,4 @@
     </div>
   </main>
 
-</body>
-
-</html>
+</body </html>
