--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="js/api.js" type="module"></script>
     <script src="js/movie.js" type="module"></script>
     <script src="js/topbtn.js" type="module"></script>
+    <script src="js/darkbtn.js" type="module"></script>
     <link rel="icon" type="image/x-icon" href="asset/favicon.ico" />
     <title>혜원이의 최고 평점 영화 콜렉션</title>
   </head>
@@ -15,7 +16,7 @@
     <div class="title">
       <a href="index.html" id="homeButton">HOME</a>
       <span class="title__text">🍿 혜원이의 최고 평점 영화 콜렉션 🍿</span>
-      <button id="darkModeToggle">다크 모드</button>
+      <button id="darkModeToggle">🌜️ DARK</button>
     </div>
     <div class="search">
       <form class="search__form">
