다크모드와 네브안 변경

--- a/index.html
+++ b/index.html
@@ -14,11 +14,18 @@
   </head>
 
   <body>
-    <div class="title">
-      <a href="index.html" id="homeButton">HOME</a>
+    <nav class="title">
+      <a href="index.html" id="homeButton">
+        <img
+          src="asset/logoRed.png"
+          alt="이미지 없음"
+          style="width: 200px; height: 100%"
+        />
+      </a>
+      <span class="nexthome">CULTUREPLEX</span>
       <span class="title__text">🍿 혜원이의 최고 평점 영화 콜렉션 🍿</span>
       <button id="darkModeToggle">🌜️ DARK</button>
-    </div>
+    </nav>
     <div class="search">
       <form class="search__form">
         <label>영화 검색 :</label>
