--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="js/api.js" type="module"></script>
     <script src="js/movie.js" type="module"></script>
     <script src="js/topbtn.js" type="module"></script>
+    <script src="js/darkmode.js" type="module"></script>
     <title>혜원이의 최고 평점 영화 콜렉션</title>
   </head>
 
