상세페이지css수정

--- a/movie.html
+++ b/movie.html
@@ -17,10 +17,8 @@
 <body class="detail-body">
   <header>
     <a href="index.html" id="homeButton">OurTube</a>
+    <h1>조이름</h1>
 
-    <div class="movie-title">
-      타이틀입니다
-    </div>
     <button id="darkModeToggle">다크 모드</button>
   </header>
 
@@ -28,8 +26,8 @@
     <div class="movie-content-top">
       <figure class="movie-poster">포스터입니다</figure>
       <div class="movie-detail">
-
-        <div class="movie-tagline">한줄평입니다</div>
+        <h2 class="movie-title">타이틀입니다</h2>
+        <h3 class="movie-tagline">한줄평입니다</h3>
 
         <div class="movie-info">
           <ul class="detail-inner">
