--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <img src="asset/logoRed.png" alt="이미지 없음" style="width: 200px; height: 100%" />
     </a>
     <span class="nexthome">CULTUREPLEX</span>
-    <span class="title__text">🍿 혜원이의 최고 평점 영화 콜렉션 🍿</span>
+    <button class="ratingBtn">평점순</button>
     <button id="darkModeToggle">🌜️ DARK</button>
   </header>
   <div class="search">
