--- a/movie.html
+++ b/movie.html
@@ -8,10 +8,11 @@
   <script src="js/content.js" type="module"></script>
   <link rel="stylesheet" href="./css/style.css">
   <link rel="icon" type="image/x-icon" href="asset/favicon.ico" />
-
-  <title></title>
   <script src="js/content.js" type="module"></script>
   <script src="js/review.js" type="module"></script>
+  <script src="js/darkbtn.js" type="module"></script>
+  <title></title>
+
 </head>
 
 <body class="detail-body">
@@ -111,7 +112,6 @@
       </li>
     </ul>
   </div>
-  </main>
 
 </body>
 
