다크모드 동그랗게 헤더고정

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       <span class="title__text">🍿 혜원이의 최고 평점 영화 콜렉션 🍿</span>
       <button id="darkModeToggle">🌜️ DARK</button>
     </header>
+    <div class="space"></div>
     <div class="search">
       <form class="search__form">
         <label>영화 검색 :</label>
