--- a/movie.html
+++ b/movie.html
@@ -23,7 +23,7 @@
     <span class="title__text">🍿 혜원이의 최고 평점 영화 콜렉션 🍿</span>
     <button id="darkModeToggle">🌜️ DARK</button>
   </header>
-
+  <div class="space"></div>
   <main class="movie-content">
     <div class="movie-content-top">
       <figure class="movie-poster">포스터입니다</figure>
