--- a/movie.html
+++ b/movie.html
@@ -14,12 +14,12 @@
 
 <body class="detail-body">
   <header class="title">
-    <a href="index.html" id="homeButton">
+    <a href="index.html" id="home-button">
       <img src="asset/logoRed.png" alt="이미지 없음" style="width: 200px; height: 100%" />
     </a>
     <span class="nexthome">CULTUREPLEX</span>
-    <span class="title__text">🍿 혜원이의 최고 평점 영화 콜렉션 🍿</span>
-    <button id="darkModeToggle">🌜️ DARK</button>
+    <span class="title-text">🍿 혜원이의 최고 평점 영화 콜렉션 🍿</span>
+    <button id="dark-mode-toggle">🌜️ DARK</button>
   </header>
 
   <main class="movie-content">
@@ -46,11 +46,11 @@
           </ul>
           <ul class="detail-inner">
             <li class="inner-content">
-              <p>vote_average<br />⭐</p>
+              <p>vote average<br />⭐</p>
               <p></p>
             </li>
             <li class="inner-content">
-              <p>country <br />🌏</p>
+              <p>Country <br />🌏</p>
               <p></p>
             </li>
             <li class="inner-content">
