--- a/movie.html
+++ b/movie.html
@@ -20,7 +20,7 @@
         />
       </a>
       <span class="nexthome">CULTUREPLEX</span>
-      <span class="title__text">🍿 혜원이의 최고 평점 영화 콜렉션 🍿</span>
+      <span class="title__text">🍿 션 🍿</span>
       <button id="darkModeToggle">🌜️ DARK</button>
     </header>
 
