--- a/index.html
+++ b/index.html
@@ -1,45 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="icon" type="image/x-icon" href="asset/favicon.ico" />
+    <script src="js/api.js" type="module"></script>
+    <script src="js/movie.js" type="module"></script>
+    <script src="js/topbtn.js" type="module"></script>
+    <script src="js/darkbtn.js" type="module"></script>
+    <script src="js/sort.js" type="module"></script>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="css/style.css" />
-  <link rel="icon" type="image/x-icon" href="asset/favicon.ico" />
-  <script src="js/api.js" type="module"></script>
-  <script src="js/movie.js" type="module"></script>
-  <script src="js/topbtn.js" type="module"></script>
-  <script src="js/darkbtn.js" type="module"></script>
-  <script src="js/sort.js" type="module"></script>
+    <link rel="icon" type="image/x-icon" href="asset/favicon.ico" />
+    <title>BEST MOVIE COLLECTION</title>
+  </head>
 
-  <link rel="icon" type="image/x-icon" href="asset/favicon.ico" />
-  <title>혜원이의 최고 평점 영화 콜렉션</title>
-</head>
+  <body>
+    <header class="title">
+      <div class="title-home">
+        <a href="index.html" id="home-button">
+          <img
+            src="asset/logoRed.png"
+            alt="이미지 없음"
+            style="width: 150px; height: 90%"
+          />
+        </a>
+        <span class="nexthome">CULTUREPLEX</span>
+      </div>
+      <span class="title-text">BEST MOVIE COLLECTION</span>
+      <button id="dark-mode-toggle">🌜️ DARK</button>
+    </header>
 
-<body>
-  <header class="title">
-    <a href="index.html" id="home-button">
-      <img src="asset/logoRed.png" alt="이미지 없음" style="width: 200px; height: 100%" />
-    </a>
-    <span class="nexthome">CULTUREPLEX</span>
-    <span class="title-text">🍿 혜원이의 최고 평점 영화 콜렉션 🍿</span>
-    <button id="dark-mode-toggle">🌜️ DARK</button>
-  </header>
-
-  <div class="search">
-    <form class="search-form">
-      <label>영화 검색 :</label>
-      <input id="search-value" type="text" placeholder="영화 제목을 검색해 보세요" autofocus />
-      <button class="search-btn">검색</button>
-    </form>
-    <div class="sort-btns">
-      <button class="sort-vote-average">Rating</button>
-      <button class="sort-title">Title</button>
-      <button class="sort-release-date">Date</button>
+    <div class="search">
+      <div></div>
+      <form class="search-form">
+        <input
+          id="search-value"
+          type="text"
+          placeholder="Search for movies"
+          autofocus
+        />
+        <button class="search-btn">Search</button>
+      </form>
+      <div class="sort-btns">
+        <button class="sort-vote-average">Rating</button>
+        <button class="sort-title">Title</button>
+        <button class="sort-release-date">Date</button>
+      </div>
     </div>
-  </div>
-  <div class="movie-cards">
-    <!-- <div class="movie-card">
+
+    <div class="movie-cards">
+      <!-- <div class="movie-card">
         <div class="movie-card-poster">
           <img src="#" />
         </div>
@@ -54,10 +65,9 @@
           <div class="movie-card-vote-average">평점</div>
         </div> 
       </div> -->
-  </div>
-  <div class="no-movie"></div>
-  <button class="move-top">Top</button>
-  <footer>COPYRIGHT&copy; Hyewon Movies All rights reserved.</footer>
-</body>
-
+    </div>
+    <div class="no-movie"></div>
+    <button class="move-top">Top</button>
+    <footer>COPYRIGHT&copy; Hyewon Movies All rights reserved.</footer>
+  </body>
 </html>
