--- a/movie.html
+++ b/movie.html
@@ -10,61 +10,62 @@
     <script src="js/darkbtn.js" type="module"></script>
     <title></title>
   </head>
-
   <body class="detail-body">
     <header class="title">
-      <a href="index.html" id="home-button">
-        <img
-          src="asset/logoRed.png"
-          alt="이미지 없음"
-          style="width: 200px; height: 100%"
-        />
-      </a>
-      <span class="nexthome">CULTUREPLEX</span>
-      <span class="title-text">🍿 혜원이의 최고 평점 영화 콜렉션 🍿</span>
+      <div class="title-home">
+        <a href="index.html" id="home-button">
+          <img
+            src="asset/logoRed.png"
+            alt="이미지 없음"
+            style="width: 150px; height: 90%"
+          />
+        </a>
+        <span class="nexthome">CULTUREPLEX</span>
+      </div>
+      <span class="title-text">BEST MOVIE COLLECTION</span>
       <button id="dark-mode-toggle">🌜️ DARK</button>
     </header>
 
     <main class="movie-content">
       <div class="movie-content-top">
-        <figure class="movie-poster">포스터입니다</figure>
+        <figure class="movie-poster"></figure>
         <div class="movie-detail">
-          <h2 class="movie-title">타이틀입니다</h2>
-          <h3 class="movie-tagline">한줄평입니다</h3>
+          <h2 class="movie-title"></h2>
+          <h3 class="movie-tagline"></h3>
 
           <div class="movie-info">
             <ul class="detail-inner">
               <li class="inner-content">
-                <p>Release Date <br />📽</p>
+                <p>Release Date</p>
                 <p></p>
               </li>
               <li class="inner-content">
-                <p>Genre <br />🎞</p>
+                <p>Genre</p>
                 <p></p>
               </li>
               <li class="inner-content">
-                <p>Runtime <br />🎦</p>
-                <p>겁나김</p>
+                <p>Runtime</p>
+                <p></p>
               </li>
             </ul>
             <ul class="detail-inner">
               <li class="inner-content">
-                <p>vote average<br />⭐</p>
+                <p>vote average</p>
                 <p></p>
               </li>
               <li class="inner-content">
-                <p>Country <br />🌏</p>
+                <p>Country</p>
                 <p></p>
               </li>
               <li class="inner-content">
-                <p>Language <br />🔊</p>
+                <p>Language</p>
                 <p></p>
               </li>
             </ul>
           </div>
         </div>
       </div>
-      <div class="movie-overview">스토리입니다</div>
+      <div class="movie-overview"></div>
     </main>
     <div class="review">
       <div class="review__wrap">
