--- a/index.html
+++ b/index.html
@@ -68,6 +68,6 @@
     </div>
     <div class="no-movie"></div>
     <button class="move-top">Top</button>
-    <footer>COPYRIGHT&copy; Hyewon Movies All rights reserved.</footer>
+    <footer>COPYRIGHT&copy; eGV All rights reserved.</footer>
   </body>
 </html>
