review count기능 추가

--- a/movie.html
+++ b/movie.html
@@ -143,7 +143,10 @@
           </div>
         </form>
       </div>
-
+      <div class="review__box">
+        <h1 id="review__title">Review</h1>
+        <span id="review__count"></span>
+      </div>
       <ul id="review__lists">
         <!-- <li class="review__list">
           <div>
