video api 받아와서 추가

--- a/movie.html
+++ b/movie.html
@@ -5,11 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="icon" type="image/x-icon" href="asset/favicon.ico" />
+    <script
+      src="https://kit.fontawesome.com/5776ac29ed.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="js/content.js" type="module"></script>
     <script src="js/credit.js" type="module"></script>
     <script src="js/review.js" type="module"></script>
     <script src="js/darkbtn.js" type="module"></script>
     <script src="js/topbtn.js" type="module"></script>
+    <script src="js/video.js" type="module"></script>
     <title></title>
   </head>
   <body class="detail-body">
@@ -67,6 +72,12 @@
         </div>
       </div>
       <div class="movie-overview"></div>
+      <div class="video">
+        <a href="" id="video__link" target="_blank"
+          ><i class="fa-brands fa-youtube fa-2xl" style="color: #db1f1f"></i
+        ></a>
+        <span class="video__type">Trailer</span>
+      </div>
       <div class="credit">
         <h1>Cast</h1>
         <ul class="credit__casts">
